@@ -505,64 +505,65 @@ class Document(XML.Document):
                             keep_spaces = False
 
 
-    ########################################################################
-    # API / Change relative links
-    ########################################################################
-    def resolve_pointer(self, uri, offset):
-        if uri.path.is_relative():
-            # XXX Here we loss the query and fragment.
-            return offset.resolve(uri.path)
-
-        return uri
-##        uri = str(uri)[1:]
-##        return here.get_pathtoroot() + uri
-
-
-    def set_template_prefix(self, offset):
-        # Set the prefix
-        data = []
-        data.append(self.header_to_unicode())
-        # Let's go!
-        for node, context in self.traverse2():
-            if isinstance(node, XML.Element):
-                if context.start:
-                    data.append(u'<%s' % node.qname)
-                    for namespace, local_name, value in node.get_attributes():
-                        qname = node.get_attribute_qname(namespace, local_name)
-                        encoded = False
-                        if local_name in ('href', 'src') \
-                               and not value.scheme and not value.authority:
-                            value = self.resolve_pointer(value, offset)
-                            encoded = True
-                        elif node.qname == 'param' and local_name == 'value':
-                            name = node.get_attribute(namespace, 'name')
-                            # Special case for Flash objects
-                            # but others possible (Java, etc.)
-                            if name == 'movie':
-                                uri = URI.decode(value)
-                                if not uri.scheme and not uri.authority:
-                                    value = self.resolve_pointer(uri, offset)
-                                    encoded = True
-                        if not encoded:
-                            type = node.get_attribute_type(namespace,
-                                                           local_name)
-                            value = type.encode(value)
-                        data.append(u' %s="%s"' % (qname, value))
-                    data.append(u'>')
-                else:
-                    data.append(u'</%s>' % node.qname)
-            elif isinstance(node, XML.Comment):
-                data.append(node.to_unicode())
-            elif isinstance(node, unicode):
-                data.append(node)
-            else:
-                raise ValueError, 'unexpected value "%s"' % node
-
-        data = u''.join(data)
-        data = data.encode('utf8')
-        resource = memory.File(data)
-        return Document(resource)
-
-
 XML.Document.set_doctype_handler('-//W3C//DTD XHTML 1.0 Strict//EN', Document)
 XML.Document.register_handler_class(Document)
+
+
+
+########################################################################
+# API / Change relative links
+########################################################################
+def resolve_pointer(uri, offset):
+    if uri.path.is_relative():
+        # XXX Here we loss the query and fragment.
+        return offset.resolve(uri.path)
+
+    return uri
+##    uri = str(uri)[1:]
+##    return here.get_pathtoroot() + uri
+
+
+def set_template_prefix(handler, offset):
+    # Set the prefix
+    data = []
+    data.append(handler.header_to_unicode())
+    # Let's go!
+    for node, context in handler.traverse2():
+        if isinstance(node, XML.Element):
+            if context.start:
+                data.append(u'<%s' % node.qname)
+                for namespace, local_name, value in node.get_attributes():
+                    qname = node.get_attribute_qname(namespace, local_name)
+                    encoded = False
+                    if local_name in ('href', 'src'):
+                        if not value.scheme and not value.authority:
+                            value = resolve_pointer(value, offset)
+                            encoded = True
+                    elif node.qname == 'param' and local_name == 'value':
+                        name = node.get_attribute(namespace, 'name')
+                        # Special case for Flash objects
+                        # but others possible (Java, etc.)
+                        if name == 'movie':
+                            uri = URI.decode(value)
+                            if not uri.scheme and not uri.authority:
+                                value = resolve_pointer(uri, offset)
+                                encoded = True
+                    if not encoded:
+                        type = node.get_attribute_type(namespace,
+                                                       local_name)
+                        value = type.encode(value)
+                    data.append(u' %s="%s"' % (qname, value))
+                data.append(u'>')
+            else:
+                data.append(u'</%s>' % node.qname)
+        elif isinstance(node, XML.Comment):
+            data.append(node.to_unicode())
+        elif isinstance(node, unicode):
+            data.append(node)
+        else:
+            raise ValueError, 'unexpected value "%s"' % node
+
+    data = u''.join(data)
+    data = data.encode('utf8')
+    resource = memory.File(data)
+    return Document(resource)
